# craft-optical-followup

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  add_path.py  astrometry.py  environment.yaml  extinction_galactic.py  fits_files.py  fluxing.par  no_subtraction_synth_search.sh  object_properties.py  params.py  photometry.py  photometry_tests_psf.py  pipeline.py  plot_fwhms.py  plotting.py  provenance.py  psfex.xml  pyproject.toml  refresh_params.py  requirements.txt  sensfunc.par  setup.py  sn.py  stats.py  utils.py  zeropoint.py  zeropoint_tests_single.py
craftutils/: astrometry.py  astronobjects.py  craft_optical_pipeline.py  fits_files.py  observation.py  params.py  photometry.py  plotting.py  provenance.py  retrieve.py  sn.py  sne.py  spectroscopy.py  stats.py  utils.py
defunct/: compare_catalogues.py  extinction_galactic.py  lazy_script.sh  no_subtraction_synth_search.sh  nuclear_offset.py  object_properties.py  plot_fwhms.py
docker/: Dockerfile
docs/: README.rst  TODO.rst  api.rst  conf.py  config.rst  extending.rst  index.rst  installation.rst  instruments.rst  outputs.rst  paths  pipeline.rst  references.rst  requirements.txt  software.rst
param/: aperture_diameters_des.json  aperture_diameters_des.yaml  aperture_diameters_fors2.json  aperture_diameters_fors2.yaml  config_doc  config_template.yaml  keys.json  keys.yaml  output_paths_doc  sextractor_names.json  sextractor_names.yaml  sextractor_names_psf.json  sextractor_names_psf.yaml
pipeline_des/: 0-pipeline.sh  1-initial.py  3-zeropoint.py
(+2711 files in other folders)
